src/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> translation_unit_or_empty
Rule 1     translation_unit_or_empty -> translation_unit
Rule 2     translation_unit_or_empty -> empty
Rule 3     translation_unit -> translation_unit external_declaration
Rule 4     translation_unit -> external_declaration
Rule 5     initializer -> assignment_expression
Rule 6     initializer -> { initializer_list_orempty }
Rule 7     initializer -> { initializer_list , }
Rule 8     initializer_list -> initializer
Rule 9     initializer_list -> initializer_list , initializer
Rule 10    init_declarator -> declarator
Rule 11    init_declarator -> declarator = initializer
Rule 12    init_declarator_list -> init_declarator
Rule 13    init_declarator_list -> init_declarator_list , init_declarator
Rule 14    declaration_specifiers_orempty -> empty
Rule 15    declaration_specifiers_orempty -> declaration_specifiers
Rule 16    empty -> <empty>
Rule 17    declaration_specifiers -> type_specifier declaration_specifiers_orempty
Rule 18    type_specifier -> VOID
Rule 19    type_specifier -> CHAR
Rule 20    type_specifier -> SHORT
Rule 21    type_specifier -> INT
Rule 22    type_specifier -> LONG
Rule 23    type_specifier -> FLOAT
Rule 24    type_specifier -> DOUBLE
Rule 25    type_specifier -> SIGNED
Rule 26    type_specifier -> UNSIGNED
Rule 27    type_specifier -> BOOL
Rule 28    type_specifier -> struct_specifier
Rule 29    declaration_list_orempty -> empty
Rule 30    declaration_list_orempty -> declaration_list
Rule 31    declaration -> declaration_specifiers init_declarator_list_orempty ;
Rule 32    declaration_list -> declaration
Rule 33    declaration_list -> declaration_list declaration
Rule 34    identifier_list_orempty -> empty
Rule 35    identifier_list_orempty -> identifier_list
Rule 36    identifier_list -> identifier
Rule 37    identifier_list -> identifier_list , identifier
Rule 38    identifier -> IDENTIFIER
Rule 39    jump_statement -> BREAK ;
Rule 40    jump_statement -> CONTINUE ;
Rule 41    jump_statement -> RETURN ;
Rule 42    jump_statement -> RETURN expression ;
Rule 43    init_declarator_list_orempty -> empty
Rule 44    init_declarator_list_orempty -> init_declarator_list
Rule 45    assignment_expression_orempty -> empty
Rule 46    assignment_expression_orempty -> assignment_expression
Rule 47    assignment_operator -> =
Rule 48    assignment_operator -> MUL_ASSIGN
Rule 49    assignment_operator -> DIV_ASSIGN
Rule 50    assignment_operator -> MOD_ASSIGN
Rule 51    assignment_operator -> ADD_ASSIGN
Rule 52    assignment_operator -> SUB_ASSIGN
Rule 53    assignment_operator -> LEFT_ASSIGN
Rule 54    assignment_operator -> RIGHT_ASSIGN
Rule 55    assignment_operator -> AND_ASSIGN
Rule 56    assignment_operator -> XOR_ASSIGN
Rule 57    assignment_operator -> OR_ASSIGN
Rule 58    argument_expression_list -> assignment_expression
Rule 59    argument_expression_list -> argument_expression_list , assignment_expression
Rule 60    assignment_expression -> conditional_expression
Rule 61    assignment_expression -> unary_expression assignment_operator assignment_expression
Rule 62    block_item_list_orempty -> empty
Rule 63    block_item_list_orempty -> block_item_list
Rule 64    constant_expression_orempty -> empty
Rule 65    constant_expression_orempty -> constant_expression
Rule 66    specifier_qualifier_list_orempty -> empty
Rule 67    specifier_qualifier_list_orempty -> specifier_qualifier_list
Rule 68    block_item -> declaration
Rule 69    block_item -> statement
Rule 70    block_item_list -> block_item
Rule 71    block_item_list -> block_item_list block_item
Rule 72    expression_orempty -> empty
Rule 73    expression_orempty -> expression
Rule 74    compound_statement -> { block_item_list_orempty }
Rule 75    conditional_expression -> binary_expression
Rule 76    constant -> INTEGER_CONSTANT
Rule 77    constant -> CHAR_CONSTANT
Rule 78    constant -> FLOAT_CONSTANT
Rule 79    constant -> BOOL_CONSTANT
Rule 80    constant_expression -> conditional_expression
Rule 81    declarator -> direct_declarator
Rule 82    declarator -> pointer direct_declarator
Rule 83    specifier_qualifier_list -> type_specifier specifier_qualifier_list_orempty
Rule 84    direct_declarator -> identifier
Rule 85    direct_declarator -> direct_declarator [ assignment_expression_orempty ]
Rule 86    direct_declarator -> direct_declarator ( parameter_list )
Rule 87    direct_declarator -> direct_declarator ( identifier_list_orempty )
Rule 88    external_declaration -> function_definition
Rule 89    external_declaration -> declaration
Rule 90    expression -> assignment_expression
Rule 91    expression -> expression , assignment_expression
Rule 92    expression_statement -> expression_orempty ;
Rule 93    function_definition -> declaration_specifiers declarator declaration_list_orempty compound_statement
Rule 94    parameter_list -> parameter_declaration
Rule 95    parameter_list -> parameter_list , parameter_declaration
Rule 96    parameter_declaration -> declaration_specifiers declarator
Rule 97    postfix_expression -> primary_expression
Rule 98    postfix_expression -> postfix_expression [ expression ]
Rule 99    postfix_expression -> postfix_expression ( argument_expression_list )
Rule 100   postfix_expression -> postfix_expression ( )
Rule 101   postfix_expression -> postfix_expression PTR_OP identifier
Rule 102   primary_expression -> identifier
Rule 103   primary_expression -> constant
Rule 104   primary_expression -> unified_string_literal
Rule 105   primary_expression -> ( expression )
Rule 106   selection_statement -> IF ( expression ) statement
Rule 107   selection_statement -> IF ( expression ) statement ELSE statement
Rule 108   iteration_statement -> WHILE ( expression ) statement
Rule 109   statement -> compound_statement
Rule 110   statement -> selection_statement
Rule 111   statement -> expression_statement
Rule 112   statement -> iteration_statement
Rule 113   statement -> jump_statement
Rule 114   struct_specifier -> STRUCT identifier
Rule 115   struct_specifier -> STRUCT { struct_declaration_list }
Rule 116   initializer_list_orempty -> empty
Rule 117   initializer_list_orempty -> initializer_list
Rule 118   struct_specifier -> STRUCT identifier { struct_declaration_list }
Rule 119   struct_declaration_list -> struct_declaration
Rule 120   struct_declaration_list -> struct_declaration_list struct_declaration
Rule 121   struct_declaration -> specifier_qualifier_list struct_declarator_list ;
Rule 122   struct_declarator_list -> declarator
Rule 123   struct_declarator_list -> struct_declarator_list , declarator
Rule 124   pointer -> *
Rule 125   pointer -> * pointer
Rule 126   unary_operator -> &
Rule 127   unary_operator -> *
Rule 128   unary_operator -> +
Rule 129   unary_operator -> -
Rule 130   unary_operator -> ~
Rule 131   unary_operator -> !
Rule 132   unary_expression -> postfix_expression
Rule 133   unary_expression -> unary_operator cast_expression
Rule 134   unified_string_literal -> STRING_CONSTANT
Rule 135   unified_string_literal -> unified_string_literal STRING_CONSTANT
Rule 136   binary_expression -> cast_expression
Rule 137   binary_expression -> binary_expression * binary_expression
Rule 138   binary_expression -> binary_expression / binary_expression
Rule 139   binary_expression -> binary_expression % binary_expression
Rule 140   binary_expression -> binary_expression + binary_expression
Rule 141   binary_expression -> binary_expression - binary_expression
Rule 142   binary_expression -> binary_expression RIGHT_OP binary_expression
Rule 143   binary_expression -> binary_expression LEFT_OP binary_expression
Rule 144   binary_expression -> binary_expression < binary_expression
Rule 145   binary_expression -> binary_expression LTE binary_expression
Rule 146   binary_expression -> binary_expression GTE binary_expression
Rule 147   binary_expression -> binary_expression > binary_expression
Rule 148   binary_expression -> binary_expression EQ_OP binary_expression
Rule 149   binary_expression -> binary_expression NEQ_OP binary_expression
Rule 150   binary_expression -> binary_expression & binary_expression
Rule 151   binary_expression -> binary_expression | binary_expression
Rule 152   binary_expression -> binary_expression ^ binary_expression
Rule 153   binary_expression -> binary_expression AND_OP binary_expression
Rule 154   binary_expression -> binary_expression OR_OP binary_expression
Rule 155   cast_expression -> unary_expression
Rule 156   cpp_advanced -> ASM
Rule 157   cpp_advanced -> BUILT_IN_FUNCTION
Rule 158   cpp_advanced -> CATCH
Rule 159   cpp_advanced -> CLASS
Rule 160   cpp_advanced -> COMMENT1
Rule 161   cpp_advanced -> COMMENT2
Rule 162   cpp_advanced -> CONST_CAST
Rule 163   cpp_advanced -> DELETE
Rule 164   cpp_advanced -> DYNAMIC_CAST
Rule 165   cpp_advanced -> EXPLICIT
Rule 166   cpp_advanced -> EXPORT
Rule 167   cpp_advanced -> FRIEND
Rule 168   cpp_advanced -> MUTABLE
Rule 169   cpp_advanced -> NAMESPACE
Rule 170   cpp_advanced -> NEW
Rule 171   cpp_advanced -> OPERATOR
Rule 172   cpp_advanced -> PRIVATE
Rule 173   cpp_advanced -> PROTECTED
Rule 174   cpp_advanced -> PUBLIC
Rule 175   cpp_advanced -> REINTERPRET_CAST
Rule 176   cpp_advanced -> STATIC_CAST
Rule 177   cpp_advanced -> TEMPLATE
Rule 178   cpp_advanced -> THIS
Rule 179   cpp_advanced -> THROW
Rule 180   cpp_advanced -> TRY
Rule 181   cpp_advanced -> TYPEID
Rule 182   cpp_advanced -> TYPENAME
Rule 183   cpp_advanced -> USING
Rule 184   cpp_advanced -> VIRTUAL
Rule 185   cpp_advanced -> AUTO
Rule 186   cpp_advanced -> CONST
Rule 187   cpp_advanced -> DO
Rule 188   cpp_advanced -> ENUM
Rule 189   cpp_advanced -> EXTERN
Rule 190   cpp_advanced -> FOR
Rule 191   cpp_advanced -> STATIC
Rule 192   cpp_advanced -> SIZEOF
Rule 193   cpp_advanced -> UNION
Rule 194   cpp_advanced -> VOLATILE
Rule 195   cpp_advanced -> RESTRICT
Rule 196   cpp_advanced -> REGISTER
Rule 197   cpp_advanced -> INLINE
Rule 198   cpp_advanced -> GOTO
Rule 199   cpp_advanced -> TYPEDEF
Rule 200   cpp_advanced -> SWITCH
Rule 201   cpp_advanced -> CASE
Rule 202   cpp_advanced -> INC_OP
Rule 203   cpp_advanced -> DEC_OP
Rule 204   cpp_advanced -> DEFAULT

Terminals, with rules where they appear

!                    : 131
%                    : 139
&                    : 126 150
(                    : 86 87 99 100 105 106 107 108
)                    : 86 87 99 100 105 106 107 108
*                    : 124 125 127 137
+                    : 128 140
,                    : 7 9 13 37 59 91 95 123
-                    : 129 141
/                    : 138
;                    : 31 39 40 41 42 92 121
<                    : 144
=                    : 11 47
>                    : 147
ADD_ASSIGN           : 51
AND_ASSIGN           : 55
AND_OP               : 153
ASM                  : 156
AUTO                 : 185
BOOL                 : 27
BOOL_CONSTANT        : 79
BREAK                : 39
BUILT_IN_FUNCTION    : 157
CASE                 : 201
CATCH                : 158
CHAR                 : 19
CHAR_CONSTANT        : 77
CLASS                : 159
COMMENT1             : 160
COMMENT2             : 161
CONST                : 186
CONST_CAST           : 162
CONTINUE             : 40
DEC_OP               : 203
DEFAULT              : 204
DELETE               : 163
DIV_ASSIGN           : 49
DO                   : 187
DOUBLE               : 24
DYNAMIC_CAST         : 164
ELSE                 : 107
ENUM                 : 188
EQ_OP                : 148
EXPLICIT             : 165
EXPORT               : 166
EXTERN               : 189
FLOAT                : 23
FLOAT_CONSTANT       : 78
FOR                  : 190
FRIEND               : 167
GOTO                 : 198
GTE                  : 146
IDENTIFIER           : 38
IF                   : 106 107
INC_OP               : 202
INLINE               : 197
INT                  : 21
INTEGER_CONSTANT     : 76
LEFT_ASSIGN          : 53
LEFT_OP              : 143
LONG                 : 22
LTE                  : 145
MOD_ASSIGN           : 50
MUL_ASSIGN           : 48
MUTABLE              : 168
NAMESPACE            : 169
NEQ_OP               : 149
NEW                  : 170
OPERATOR             : 171
OR_ASSIGN            : 57
OR_OP                : 154
PRIVATE              : 172
PROTECTED            : 173
PTR_OP               : 101
PUBLIC               : 174
REGISTER             : 196
REINTERPRET_CAST     : 175
RESTRICT             : 195
RETURN               : 41 42
RIGHT_ASSIGN         : 54
RIGHT_OP             : 142
SHORT                : 20
SIGNED               : 25
SIZEOF               : 192
STATIC               : 191
STATIC_CAST          : 176
STRING_CONSTANT      : 134 135
STRUCT               : 114 115 118
SUB_ASSIGN           : 52
SWITCH               : 200
TEMPLATE             : 177
THIS                 : 178
THROW                : 179
TRY                  : 180
TYPEDEF              : 199
TYPEID               : 181
TYPENAME             : 182
UNION                : 193
UNSIGNED             : 26
USING                : 183
VIRTUAL              : 184
VOID                 : 18
VOLATILE             : 194
WHILE                : 108
XOR_ASSIGN           : 56
[                    : 85 98
]                    : 85 98
^                    : 152
error                : 
{                    : 6 7 74 115 118
|                    : 151
}                    : 6 7 74 115 118
~                    : 130

Nonterminals, with rules where they appear

argument_expression_list : 59 99
assignment_expression : 5 46 58 59 61 90 91
assignment_expression_orempty : 85
assignment_operator  : 61
binary_expression    : 75 137 137 138 138 139 139 140 140 141 141 142 142 143 143 144 144 145 145 146 146 147 147 148 148 149 149 150 150 151 151 152 152 153 153 154 154
block_item           : 70 71
block_item_list      : 63 71
block_item_list_orempty : 74
cast_expression      : 133 136
compound_statement   : 93 109
conditional_expression : 60 80
constant             : 103
constant_expression  : 65
constant_expression_orempty : 
cpp_advanced         : 
declaration          : 32 33 68 89
declaration_list     : 30 33
declaration_list_orempty : 93
declaration_specifiers : 15 31 93 96
declaration_specifiers_orempty : 17
declarator           : 10 11 93 96 122 123
direct_declarator    : 81 82 85 86 87
empty                : 2 14 29 34 43 45 62 64 66 72 116
expression           : 42 73 91 98 105 106 107 108
expression_orempty   : 92
expression_statement : 111
external_declaration : 3 4
function_definition  : 88
identifier           : 36 37 84 101 102 114 118
identifier_list      : 35 37
identifier_list_orempty : 87
init_declarator      : 12 13
init_declarator_list : 13 44
init_declarator_list_orempty : 31
initializer          : 8 9 11
initializer_list     : 7 9 117
initializer_list_orempty : 6
iteration_statement  : 112
jump_statement       : 113
parameter_declaration : 94 95
parameter_list       : 86 95
pointer              : 82 125
postfix_expression   : 98 99 100 101 132
primary_expression   : 97
selection_statement  : 110
specifier_qualifier_list : 67 121
specifier_qualifier_list_orempty : 83
statement            : 69 106 107 107 108
struct_declaration   : 119 120
struct_declaration_list : 115 118 120
struct_declarator_list : 121 123
struct_specifier     : 28
translation_unit     : 1 3
translation_unit_or_empty : 0
type_specifier       : 17 83
unary_expression     : 61 155
unary_operator       : 133
unified_string_literal : 104 135

Parsing method: LALR

state 0

    (0) S' -> . translation_unit_or_empty
    (1) translation_unit_or_empty -> . translation_unit
    (2) translation_unit_or_empty -> . empty
    (3) translation_unit -> . translation_unit external_declaration
    (4) translation_unit -> . external_declaration
    (16) empty -> .
    (88) external_declaration -> . function_definition
    (89) external_declaration -> . declaration
    (93) function_definition -> . declaration_specifiers declarator declaration_list_orempty compound_statement
    (31) declaration -> . declaration_specifiers init_declarator_list_orempty ;
    (17) declaration_specifiers -> . type_specifier declaration_specifiers_orempty
    (18) type_specifier -> . VOID
    (19) type_specifier -> . CHAR
    (20) type_specifier -> . SHORT
    (21) type_specifier -> . INT
    (22) type_specifier -> . LONG
    (23) type_specifier -> . FLOAT
    (24) type_specifier -> . DOUBLE
    (25) type_specifier -> . SIGNED
    (26) type_specifier -> . UNSIGNED
    (27) type_specifier -> . BOOL
    (28) type_specifier -> . struct_specifier
    (114) struct_specifier -> . STRUCT identifier
    (115) struct_specifier -> . STRUCT { struct_declaration_list }
    (118) struct_specifier -> . STRUCT identifier { struct_declaration_list }

    $end            reduce using rule 16 (empty -> .)
    VOID            shift and go to state 9
    CHAR            shift and go to state 10
    SHORT           shift and go to state 11
    INT             shift and go to state 12
    LONG            shift and go to state 13
    FLOAT           shift and go to state 14
    DOUBLE          shift and go to state 15
    SIGNED          shift and go to state 16
    UNSIGNED        shift and go to state 17
    BOOL            shift and go to state 18
    STRUCT          shift and go to state 20

    translation_unit_or_empty      shift and go to state 1
    translation_unit               shift and go to state 2
    empty                          shift and go to state 3
    external_declaration           shift and go to state 4
    function_definition            shift and go to state 5
    declaration                    shift and go to state 6
    declaration_specifiers         shift and go to state 7
    type_specifier                 shift and go to state 8
    struct_specifier               shift and go to state 19

state 1

    (0) S' -> translation_unit_or_empty .



state 2

    (1) translation_unit_or_empty -> translation_unit .
    (3) translation_unit -> translation_unit . external_declaration
    (88) external_declaration -> . function_definition
    (89) external_declaration -> . declaration
    (93) function_definition -> . declaration_specifiers declarator declaration_list_orempty compound_statement
    (31) declaration -> . declaration_specifiers init_declarator_list_orempty ;
    (17) declaration_specifiers -> . type_specifier declaration_specifiers_orempty
    (18) type_specifier -> . VOID
    (19) type_specifier -> . CHAR
    (20) type_specifier -> . SHORT
    (21) type_specifier -> . INT
    (22) type_specifier -> . LONG
    (23) type_specifier -> . FLOAT
    (24) type_specifier -> . DOUBLE
    (25) type_specifier -> . SIGNED
    (26) type_specifier -> . UNSIGNED
    (27) type_specifier -> . BOOL
    (28) type_specifier -> . struct_specifier
    (114) struct_specifier -> . STRUCT identifier
    (115) struct_specifier -> . STRUCT { struct_declaration_list }
    (118) struct_specifier -> . STRUCT identifier { struct_declaration_list }

    $end            reduce using rule 1 (translation_unit_or_empty -> translation_unit .)
    VOID            shift and go to state 9
    CHAR            shift and go to state 10
    SHORT           shift and go to state 11
    INT             shift and go to state 12
    LONG            shift and go to state 13
    FLOAT           shift and go to state 14
    DOUBLE          shift and go to state 15
    SIGNED          shift and go to state 16
    UNSIGNED        shift and go to state 17
    BOOL            shift and go to state 18
    STRUCT          shift and go to state 20

    external_declaration           shift and go to state 21
    function_definition            shift and go to state 5
    declaration                    shift and go to state 6
    declaration_specifiers         shift and go to state 7
    type_specifier                 shift and go to state 8
    struct_specifier               shift and go to state 19

state 3

    (2) translation_unit_or_empty -> empty .

    $end            reduce using rule 2 (translation_unit_or_empty -> empty .)


state 4

    (4) translation_unit -> external_declaration .

    VOID            reduce using rule 4 (translation_unit -> external_declaration .)
    CHAR            reduce using rule 4 (translation_unit -> external_declaration .)
    SHORT           reduce using rule 4 (translation_unit -> external_declaration .)
    INT             reduce using rule 4 (translation_unit -> external_declaration .)
    LONG            reduce using rule 4 (translation_unit -> external_declaration .)
    FLOAT           reduce using rule 4 (translation_unit -> external_declaration .)
    DOUBLE          reduce using rule 4 (translation_unit -> external_declaration .)
    SIGNED          reduce using rule 4 (translation_unit -> external_declaration .)
    UNSIGNED        reduce using rule 4 (translation_unit -> external_declaration .)
    BOOL            reduce using rule 4 (translation_unit -> external_declaration .)
    STRUCT          reduce using rule 4 (translation_unit -> external_declaration .)
    $end            reduce using rule 4 (translation_unit -> external_declaration .)


state 5

    (88) external_declaration -> function_definition .

    VOID            reduce using rule 88 (external_declaration -> function_definition .)
    CHAR            reduce using rule 88 (external_declaration -> function_definition .)
    SHORT           reduce using rule 88 (external_declaration -> function_definition .)
    INT             reduce using rule 88 (external_declaration -> function_definition .)
    LONG            reduce using rule 88 (external_declaration -> function_definition .)
    FLOAT           reduce using rule 88 (external_declaration -> function_definition .)
    DOUBLE          reduce using rule 88 (external_declaration -> function_definition .)
    SIGNED          reduce using rule 88 (external_declaration -> function_definition .)
    UNSIGNED        reduce using rule 88 (external_declaration -> function_definition .)
    BOOL            reduce using rule 88 (external_declaration -> function_definition .)
    STRUCT          reduce using rule 88 (external_declaration -> function_definition .)
    $end            reduce using rule 88 (external_declaration -> function_definition .)


state 6

    (89) external_declaration -> declaration .

    VOID            reduce using rule 89 (external_declaration -> declaration .)
    CHAR            reduce using rule 89 (external_declaration -> declaration .)
    SHORT           reduce using rule 89 (external_declaration -> declaration .)
    INT             reduce using rule 89 (external_declaration -> declaration .)
    LONG            reduce using rule 89 (external_declaration -> declaration .)
    FLOAT           reduce using rule 89 (external_declaration -> declaration .)
    DOUBLE          reduce using rule 89 (external_declaration -> declaration .)
    SIGNED          reduce using rule 89 (external_declaration -> declaration .)
    UNSIGNED        reduce using rule 89 (external_declaration -> declaration .)
    BOOL            reduce using rule 89 (external_declaration -> declaration .)
    STRUCT          reduce using rule 89 (external_declaration -> declaration .)
    $end            reduce using rule 89 (external_declaration -> declaration .)


state 7

    (93) function_definition -> declaration_specifiers . declarator declaration_list_orempty compound_statement
    (31) declaration -> declaration_specifiers . init_declarator_list_orempty ;
    (81) declarator -> . direct_declarator
    (82) declarator -> . pointer direct_declarator
    (43) init_declarator_list_orempty -> . empty
    (44) init_declarator_list_orempty -> . init_declarator_list
    (84) direct_declarator -> . identifier
    (85) direct_declarator -> . direct_declarator [ assignment_expression_orempty ]
    (86) direct_declarator -> . direct_declarator ( parameter_list )
    (87) direct_declarator -> . direct_declarator ( identifier_list_orempty )
    (124) pointer -> . *
    (125) pointer -> . * pointer
    (16) empty -> .
    (12) init_declarator_list -> . init_declarator
    (13) init_declarator_list -> . init_declarator_list , init_declarator
    (38) identifier -> . IDENTIFIER
    (10) init_declarator -> . declarator
    (11) init_declarator -> . declarator = initializer

    *               shift and go to state 29
    ;               reduce using rule 16 (empty -> .)
    IDENTIFIER      shift and go to state 31

    declarator                     shift and go to state 22
    init_declarator_list_orempty   shift and go to state 23
    direct_declarator              shift and go to state 24
    pointer                        shift and go to state 25
    empty                          shift and go to state 26
    init_declarator_list           shift and go to state 27
    identifier                     shift and go to state 28
    init_declarator                shift and go to state 30

state 8

    (17) declaration_specifiers -> type_specifier . declaration_specifiers_orempty
    (14) declaration_specifiers_orempty -> . empty
    (15) declaration_specifiers_orempty -> . declaration_specifiers
    (16) empty -> .
    (17) declaration_specifiers -> . type_specifier declaration_specifiers_orempty
    (18) type_specifier -> . VOID
    (19) type_specifier -> . CHAR
    (20) type_specifier -> . SHORT
    (21) type_specifier -> . INT
    (22) type_specifier -> . LONG
    (23) type_specifier -> . FLOAT
    (24) type_specifier -> . DOUBLE
    (25) type_specifier -> . SIGNED
    (26) type_specifier -> . UNSIGNED
    (27) type_specifier -> . BOOL
    (28) type_specifier -> . struct_specifier
    (114) struct_specifier -> . STRUCT identifier
    (115) struct_specifier -> . STRUCT { struct_declaration_list }
    (118) struct_specifier -> . STRUCT identifier { struct_declaration_list }

    *               reduce using rule 16 (empty -> .)
    IDENTIFIER      reduce using rule 16 (empty -> .)
    ;               reduce using rule 16 (empty -> .)
    VOID            shift and go to state 9
    CHAR            shift and go to state 10
    SHORT           shift and go to state 11
    INT             shift and go to state 12
    LONG            shift and go to state 13
    FLOAT           shift and go to state 14
    DOUBLE          shift and go to state 15
    SIGNED          shift and go to state 16
    UNSIGNED        shift and go to state 17
    BOOL            shift and go to state 18
    STRUCT          shift and go to state 20

    type_specifier                 shift and go to state 8
    declaration_specifiers_orempty shift and go to state 32
    empty                          shift and go to state 33
    declaration_specifiers         shift and go to state 34
    struct_specifier               shift and go to state 19

state 9

    (18) type_specifier -> VOID .

    VOID            reduce using rule 18 (type_specifier -> VOID .)
    CHAR            reduce using rule 18 (type_specifier -> VOID .)
    SHORT           reduce using rule 18 (type_specifier -> VOID .)
    INT             reduce using rule 18 (type_specifier -> VOID .)
    LONG            reduce using rule 18 (type_specifier -> VOID .)
    FLOAT           reduce using rule 18 (type_specifier -> VOID .)
    DOUBLE          reduce using rule 18 (type_specifier -> VOID .)
    SIGNED          reduce using rule 18 (type_specifier -> VOID .)
    UNSIGNED        reduce using rule 18 (type_specifier -> VOID .)
    BOOL            reduce using rule 18 (type_specifier -> VOID .)
    STRUCT          reduce using rule 18 (type_specifier -> VOID .)
    *               reduce using rule 18 (type_specifier -> VOID .)
    IDENTIFIER      reduce using rule 18 (type_specifier -> VOID .)
    ;               reduce using rule 18 (type_specifier -> VOID .)


state 10

    (19) type_specifier -> CHAR .

    VOID            reduce using rule 19 (type_specifier -> CHAR .)
    CHAR            reduce using rule 19 (type_specifier -> CHAR .)
    SHORT           reduce using rule 19 (type_specifier -> CHAR .)
    INT             reduce using rule 19 (type_specifier -> CHAR .)
    LONG            reduce using rule 19 (type_specifier -> CHAR .)
    FLOAT           reduce using rule 19 (type_specifier -> CHAR .)
    DOUBLE          reduce using rule 19 (type_specifier -> CHAR .)
    SIGNED          reduce using rule 19 (type_specifier -> CHAR .)
    UNSIGNED        reduce using rule 19 (type_specifier -> CHAR .)
    BOOL            reduce using rule 19 (type_specifier -> CHAR .)
    STRUCT          reduce using rule 19 (type_specifier -> CHAR .)
    *               reduce using rule 19 (type_specifier -> CHAR .)
    IDENTIFIER      reduce using rule 19 (type_specifier -> CHAR .)
    ;               reduce using rule 19 (type_specifier -> CHAR .)


state 11

    (20) type_specifier -> SHORT .

    VOID            reduce using rule 20 (type_specifier -> SHORT .)
    CHAR            reduce using rule 20 (type_specifier -> SHORT .)
    SHORT           reduce using rule 20 (type_specifier -> SHORT .)
    INT             reduce using rule 20 (type_specifier -> SHORT .)
    LONG            reduce using rule 20 (type_specifier -> SHORT .)
    FLOAT           reduce using rule 20 (type_specifier -> SHORT .)
    DOUBLE          reduce using rule 20 (type_specifier -> SHORT .)
    SIGNED          reduce using rule 20 (type_specifier -> SHORT .)
    UNSIGNED        reduce using rule 20 (type_specifier -> SHORT .)
    BOOL            reduce using rule 20 (type_specifier -> SHORT .)
    STRUCT          reduce using rule 20 (type_specifier -> SHORT .)
    *               reduce using rule 20 (type_specifier -> SHORT .)
    IDENTIFIER      reduce using rule 20 (type_specifier -> SHORT .)
    ;               reduce using rule 20 (type_specifier -> SHORT .)


state 12

    (21) type_specifier -> INT .

    VOID            reduce using rule 21 (type_specifier -> INT .)
    CHAR            reduce using rule 21 (type_specifier -> INT .)
    SHORT           reduce using rule 21 (type_specifier -> INT .)
    INT             reduce using rule 21 (type_specifier -> INT .)
    LONG            reduce using rule 21 (type_specifier -> INT .)
    FLOAT           reduce using rule 21 (type_specifier -> INT .)
    DOUBLE          reduce using rule 21 (type_specifier -> INT .)
    SIGNED          reduce using rule 21 (type_specifier -> INT .)
    UNSIGNED        reduce using rule 21 (type_specifier -> INT .)
    BOOL            reduce using rule 21 (type_specifier -> INT .)
    STRUCT          reduce using rule 21 (type_specifier -> INT .)
    *               reduce using rule 21 (type_specifier -> INT .)
    IDENTIFIER      reduce using rule 21 (type_specifier -> INT .)
    ;               reduce using rule 21 (type_specifier -> INT .)


state 13

    (22) type_specifier -> LONG .

    VOID            reduce using rule 22 (type_specifier -> LONG .)
    CHAR            reduce using rule 22 (type_specifier -> LONG .)
    SHORT           reduce using rule 22 (type_specifier -> LONG .)
    INT             reduce using rule 22 (type_specifier -> LONG .)
    LONG            reduce using rule 22 (type_specifier -> LONG .)
    FLOAT           reduce using rule 22 (type_specifier -> LONG .)
    DOUBLE          reduce using rule 22 (type_specifier -> LONG .)
    SIGNED          reduce using rule 22 (type_specifier -> LONG .)
    UNSIGNED        reduce using rule 22 (type_specifier -> LONG .)
    BOOL            reduce using rule 22 (type_specifier -> LONG .)
    STRUCT          reduce using rule 22 (type_specifier -> LONG .)
    *               reduce using rule 22 (type_specifier -> LONG .)
    IDENTIFIER      reduce using rule 22 (type_specifier -> LONG .)
    ;               reduce using rule 22 (type_specifier -> LONG .)


state 14

    (23) type_specifier -> FLOAT .

    VOID            reduce using rule 23 (type_specifier -> FLOAT .)
    CHAR            reduce using rule 23 (type_specifier -> FLOAT .)
    SHORT           reduce using rule 23 (type_specifier -> FLOAT .)
    INT             reduce using rule 23 (type_specifier -> FLOAT .)
    LONG            reduce using rule 23 (type_specifier -> FLOAT .)
    FLOAT           reduce using rule 23 (type_specifier -> FLOAT .)
    DOUBLE          reduce using rule 23 (type_specifier -> FLOAT .)
    SIGNED          reduce using rule 23 (type_specifier -> FLOAT .)
    UNSIGNED        reduce using rule 23 (type_specifier -> FLOAT .)
    BOOL            reduce using rule 23 (type_specifier -> FLOAT .)
    STRUCT          reduce using rule 23 (type_specifier -> FLOAT .)
    *               reduce using rule 23 (type_specifier -> FLOAT .)
    IDENTIFIER      reduce using rule 23 (type_specifier -> FLOAT .)
    ;               reduce using rule 23 (type_specifier -> FLOAT .)


state 15

    (24) type_specifier -> DOUBLE .

    VOID            reduce using rule 24 (type_specifier -> DOUBLE .)
    CHAR            reduce using rule 24 (type_specifier -> DOUBLE .)
    SHORT           reduce using rule 24 (type_specifier -> DOUBLE .)
    INT             reduce using rule 24 (type_specifier -> DOUBLE .)
    LONG            reduce using rule 24 (type_specifier -> DOUBLE .)
    FLOAT           reduce using rule 24 (type_specifier -> DOUBLE .)
    DOUBLE          reduce using rule 24 (type_specifier -> DOUBLE .)
    SIGNED          reduce using rule 24 (type_specifier -> DOUBLE .)
    UNSIGNED        reduce using rule 24 (type_specifier -> DOUBLE .)
    BOOL            reduce using rule 24 (type_specifier -> DOUBLE .)
    STRUCT          reduce using rule 24 (type_specifier -> DOUBLE .)
    *               reduce using rule 24 (type_specifier -> DOUBLE .)
    IDENTIFIER      reduce using rule 24 (type_specifier -> DOUBLE .)
    ;               reduce using rule 24 (type_specifier -> DOUBLE .)


state 16

    (25) type_specifier -> SIGNED .

    VOID            reduce using rule 25 (type_specifier -> SIGNED .)
    CHAR            reduce using rule 25 (type_specifier -> SIGNED .)
    SHORT           reduce using rule 25 (type_specifier -> SIGNED .)
    INT             reduce using rule 25 (type_specifier -> SIGNED .)
    LONG            reduce using rule 25 (type_specifier -> SIGNED .)
    FLOAT           reduce using rule 25 (type_specifier -> SIGNED .)
    DOUBLE          reduce using rule 25 (type_specifier -> SIGNED .)
    SIGNED          reduce using rule 25 (type_specifier -> SIGNED .)
    UNSIGNED        reduce using rule 25 (type_specifier -> SIGNED .)
    BOOL            reduce using rule 25 (type_specifier -> SIGNED .)
    STRUCT          reduce using rule 25 (type_specifier -> SIGNED .)
    *               reduce using rule 25 (type_specifier -> SIGNED .)
    IDENTIFIER      reduce using rule 25 (type_specifier -> SIGNED .)
    ;               reduce using rule 25 (type_specifier -> SIGNED .)


state 17

    (26) type_specifier -> UNSIGNED .
